# Urho3D-Mastercurrent-Existence

./: CMakeLists.txt
CMake/Modules/: Urho3D-CMake-common.cmake
Source/: CMakeLists.txt
Source/ExistenceApps/: CMakeLists.txt  ExistenceApps.h  ExistenceApps.inl  Player.h  PlayerLevels.h
Source/ExistenceApps/ExistenceClient/: Character.cpp  Character.h  Entity.cpp  Entity.h  EnvironmentBuild.cpp  ExistenceClient.cpp  ExistenceClient.h  ExistenceClientConsole.cpp  ExistenceClientConsole.h  ExistenceClientFile.cpp  ExistenceClientRender.cpp  ExistenceClientRender.h  ExistenceClientStateAccount.cpp  ExistenceClientStateAccount.h  ExistenceClientStateGameMode.cpp  ExistenceClientStateLogin.cpp  ExistenceClientStateLogin.h  ExistenceClientStateMainScreen.cpp  ExistenceClientStateMainScreen.h  ExistenceClientStatePlayer.cpp  ExistenceClientStatePlayer.h  ExistenceClientStateProgress.cpp  ExistenceClientStateProgress.h  ExistenceClientStateSingleton.cpp  ExistenceClientStateSplash.cpp  ExistenceClientUI.cpp  ExistenceClientUI.h  ExistenceEditor.h  ExistenceFile.cpp  GameObject.cpp  GameObject.h  GameStateComponent..cpp  GameStateComponent.h  GameStateEvents.h  GameStateHandler.cpp  GameStateHandler.h  GameStateHandlerComponent.cpp  GameStateHandlerComponent.h  Manager.cpp  Manager.h  (+2 more)
Source/ExistenceApps/ExistenceComponents/: AIController.cpp  AIController.h  CMakeLists.txt  Character.cpp  Character.h  DroneEntity.cpp  DroneEntity.h  Entity.cpp  Entity.h  EnvironmentBuild.h  GameObject.cpp  GameStateHandlerComponent.cpp  GameStateHandlerComponent.h  InteractEvent.h  InteractObject.cpp  InteractObject.h  Player.cpp
Source/ExistenceApps/ExistenceEditor/: CMakeLists.txt  ExistenceEditor.cpp  ExistenceEditor.h
Source/Urho3D/Core/: Context.cpp  Object.cpp  WorkQueue.cpp
Source/Urho3D/Engine/: Application.h  Engine.cpp
Source/Urho3D/Graphics/: Terrain.cpp  Terrain.h
Source/Urho3D/Procedural/: Procedural.cpp  Procedural.h  ProceduralTerrain.cpp  ProceduralTerrain.h
